fix initial flickering for carousel-section

--- a/scss/info.scss
+++ b/scss/info.scss
@@ -337,6 +337,7 @@ a {
     grid-column: span 8;
     width: 100%;
     height: auto;
+    visibility: hidden;
 }
 
 .gallery-section {
